[tool.poetry]
name = "burnrecon"
version = "0.1.0"
description = ""
authors = ["Wellington Moraes <wellpunk@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.1.1"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
